<resources>
    <string name="app_name">My Study Planner</string>
    <string name="username">MSSV</string>
    <string name="password">Mật khẩu</string>
    <string name="retype">Nhập lại mật khẩu</string>
    <string name="logo">App logo</string>
    <string name="login">Đăng nhập</string>
    <string name="sign_up">Đăng ký</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>